--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -15,6 +15,7 @@
   justify-content: space-between
   +media-breakpoint-down(sm)
     height: auto
+    display: block
     +padding(vertical, .75rem)
 
 .page-header__title
