--- a/app/assets/stylesheets/blocks/practice/_practice-content.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice-content.sass
@@ -1,3 +1,8 @@
+.practice-contents
+  max-width: 100%
+  width: 50rem
+  +margin(horizontal, auto)
+
 .practice-content
   position: relative
   display: block
