--- a/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
@@ -19,6 +19,7 @@ $thread-header-author: 4.75rem
 
 .thread-comment-form__form
   background-color: $base
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
   padding: 1rem
   border-radius: .25rem
   +relative
@@ -35,4 +36,4 @@ $thread-header-author: 4.75rem
 
 .thread-comment-form__action
   display: flex
-  justify-content: flex-end
+  justify-content: center
