--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -1,4 +1,4 @@
-$button-styles: standard
+$button-styles: standard, simple
 
 $small-column-horizontal-padding: 2rem
 $xs-small-column-horizontal-padding: 1rem
@@ -6,3 +6,5 @@ $xs-small-column-horizontal-padding: 1rem
 $grid-gutter-width: 1rem
 
 $root-background-color: $background-color
+$basic-sans-serif: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif
+
