--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,6 +20,7 @@ html.is-application lang="ja"
       = stylesheet_link_tag "//cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
       = render "import_prism"
     = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
+    = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto', media: 'all'
     = content_for(:head_last) if content_for?(:head_last)
   body#body class="#{body_class} #{page_classes}"
     = render "google_tag_manager_body"
@@ -39,5 +40,7 @@ html.is-application lang="ja"
       .recent-reports
         .recent-reports__items
           = render partial: "reports/recent_reports", collection: recent_reports, as: :report
+        = link_to reports_path, class: "recent-reports__to-index" do
+          | もっと見る
     - unless page_classes.include?("welcome")
       = render("to_top")
