--- a/app/assets/stylesheets/blocks/form/_markdown-form.sass
+++ b/app/assets/stylesheets/blocks/form/_markdown-form.sass
@@ -6,7 +6,7 @@
 .markdown-form__preview
   background-color: $base
   padding: 1rem
-  +text-block(.875rem 1.8 1.4em)
+  +text-block(.875rem 1.8)
   border-radius: .25rem
   min-height: 22rem
   +media-breakpoint-down(sm)
