--- a/app/assets/stylesheets/blocks/report/_learning-times.sass
+++ b/app/assets/stylesheets/blocks/report/_learning-times.sass
@@ -1,21 +1,23 @@
 .learning-times
+  +padding(vertical, .75rem)
+  +padding(horizontal, 2rem)
+  border-bottom: solid 1px #dadbdc
+  +media-breakpoint-down(sm)
+    +padding(horizontal, 1rem)
+
+.learning-times__header
   font-size: .875rem
+  margin-bottom: .25rem
+  display: flex
+  align-items: center
   +media-breakpoint-down(sm)
     font-size: .8125rem
 
-.learning-times
-  +padding(vertical, 1.4em 0)
-  +margin(horizontal, 2rem)
-  +media-breakpoint-down(sm)
-    +padding(vertical, 1.4em 0)
-    +margin(horizontal, 1rem)
-
 .learning-times__title
-  +text-block(1.625em 1.4 .75rem, 700 flex)
-  padding-bottom: .25em
-  border-bottom: 0.0625rem solid #dadbdc
+  +text-block(.8125rem 1.4, 700)
 
 .learning-times__total-time
+  +text-block(.8125rem 1.4, 700)
   display: block
   margin-left: .25rem
 
