--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -13,6 +13,7 @@
   border-bottom: solid 1px $side-border
   transition: color .2s ease-in, background-color .2s ease-in
   +position(relative)
+  overflow: hidden
   &:hover
     background-color: $side-shade
 
@@ -34,3 +35,12 @@
   +position(absolute, left .25rem, top .25rem)
   font-size: 1.5rem
   text-shadow: $main-color .0625rem .0625rem 0
+
+.recent-reports__to-index
+  padding: 1rem .75rem
+  border-bottom: solid 1px $side-border
+  transition: color .2s ease-in, background-color .2s ease-in
+  +position(relative)
+  +text-block(.8125rem 1, block $reversal-text center)
+  &:hover
+    background-color: $side-shade
