--- a/app/assets/stylesheets/blocks/thread/_thread-comments-container.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comments-container.sass
@@ -3,7 +3,7 @@
   +margin(horizontal, auto)
 
 .thread-comments-container__title
-  +text-block(1.25rem 1.45 1.5rem, flex)
+  +text-block(1.125rem 1.45 1.5rem, flex)
   align-items: center
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
@@ -12,7 +12,7 @@
   +text-block(.875rem 1, 600 flex)
   align-items: center
   +size(auto 1.25rem)
-  background-color: #bbbbbb
+  background-color: $base
   +padding(horizontal, .5rem)
-  border-radius: .5rem
-  margin-left: .25rem
+  border-radius: 1.5rem
+  margin-left: .5rem
