--- a/app/assets/stylesheets/blocks/thread/_threads.sass
+++ b/app/assets/stylesheets/blocks/thread/_threads.sass
@@ -2,14 +2,15 @@
   background-color: $base
   border-radius: .25rem
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
-  max-width: 62.5rem
+  max-width: 50rem
   +margin(horizontal, auto)
   +media-breakpoint-down(sm)
     margin-bottom: 2rem
 
 .thread-list-item
-  border-bottom: solid 1px $background-color
   padding: .75rem 1rem
+  &:not(:last-child)
+    border-bottom: solid 1px $background-color
   +media-breakpoint-down(sm)
     padding: .75rem
 
@@ -41,6 +42,7 @@
 .thread-list-item__title-link
   +text-block(1rem 1.5, 600 $side)
   word-break: break-all
+  +hover-link-reversal
 
 .thread-list-item__actions
   margin-left: .5rem
