--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,11 +1,11 @@
-$main-color: #2c2461
+$main-color: #372c7d
 $accent-color: #ffbe0a
 $base: white
 $base-color: $base
 $background-color: #e6e6e6
 $background-color-shade: #cbcbcb
 
-$default-text: #464c4e
+$default-text: #35343c
 $reversal-text: white
 $muted-text: #7b8386
 
@@ -52,13 +52,13 @@ $button-checked-color: $danger
 $button-checked-icon-color: $reversal-text
 
 $xs-button-font-size: .75rem
-$sm-button-font-size: .875rem
-$md-button-font-size: .875rem
-$lg-button-font-size: 1.125rem
+$sm-button-font-size: .75rem
+$md-button-font-size: .8125rem
+$lg-button-font-size: .875rem
 $xl-button-font-size: 1.25rem
 
 $button-xs-height-ratio: 2.4
 $button-sm-height-ratio: 2.2
-$button-md-height-ratio: 2.7
+$button-md-height-ratio: 2.6
 $button-lg-height-ratio: 2.85
 $button-xl-height-ratio: 2.85
