--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -3,30 +3,42 @@ header.page-header
   .container
     .page-header__container
       h1.page-header__title= title
-      .page-header__action
-        = link_to [:new, :page], class: 'is-button-standard-md-warning' do
-          i.fa.fa-plus
-          | 新規ページ
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to [:new, :page], class: 'is-button-simple-md-warning' do
+              i.fa.fa-plus
+              | 新規ページ
+          li.page-header-actions__item
+            = link_to :pages, class: 'is-button-simple-md-secondary' do
+              i.fa.fa-angle-left
+              | 一覧に戻る
 
 .page-body
   .container
     article.thread.is-page
       .thread__inner
-        header.thread__header
-          h1.thread__title
+        header.thread-header
+          h1.thread-header__title
             = @page.title
-        .thread__description.js-markdown-view.js-target-blank.is-long-text-style.js-markdown
-          = @page.body
-        footer.thread__body-footer
-          .thread__body-footer-container
-            .thread__actions
-              ul.thread__actions-items
-                li.thread__actions-item
-                  = link_to [:edit, @page], class: 'thread__actions-item-link is-success' do
+          .thread-meta
+            .thread-meta__label
+              | 最終更新
+            time.thread-meta__created-at(datetime="#{@page.updated_at.to_datetime}" pubdate="pubdate")
+              = l @page.updated_at, format: :date_long_with_time
+        .thread-body
+          .thread__description.js-markdown-view.js-target-blank.is-long-text-style.js-markdown
+            = @page.body
+          .thread-edit-tools
+            .thread-edit-tools__inner
+              ul.thread-edit-tools__items
+                li.thread-edit-tools__item
+                  = link_to [:edit, @page], class: 'thread-edit-tools__item-link is-success' do
                     i.fa.fa-pencil
-                li.thread__actions-item
-                  = link_to @page, data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread__actions-item-link is-danger' do
+                li.thread-edit-tools__item
+                  = link_to @page, data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-edit-tools__item-link is-danger' do
                     i.fa.fa-trash-o
-            = link_to :pages, class: 'is-button-standard-sm-secondary' do
-              i.fa.fa-angle-left
-              | 一覧に戻る
+      .thread-prev-next
+        .thread-prev-next__item
+          = link_to :pages, class: 'thread-prev-next__item-link is-index' do
+            | 一覧に戻る
