--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -6,7 +6,7 @@
       .row
         .col-md-6.col-xs-12
           = f.label :category_id, class: 'a-label'
-          .is-button-standard-md-secondary.is-select.is-block
+          .is-button-simple-md-secondary.is-select.is-block
             = f.collection_select :category_id, Category.all, :id, :name, {}
     .form-item
       .row
@@ -33,10 +33,10 @@
           .js-goal-preview.is-long-text-style.markdown-form__preview
   .form-actions
     ul.form-actions__items
+      li.form-actions__item.is-main
+        = f.submit nil, class: 'is-button-simple-lg-warning is-block'
       li.form-actions__item
         - if params[:action] == 'new' || params[:action] == 'create'
-          = link_to "キャンセル", practices_path, class: "is-button-standard-md-secondary"
+          = link_to "キャンセル", practices_path, class: "is-button-simple-md-secondary"
         - elsif params[:action] == 'edit' || params[:action] == 'update'
-          = link_to "キャンセル", practice_path, class: "is-button-standard-md-secondary"
-      li.form-actions__item
-        = f.submit nil, class: 'is-button-standard-lg-warning'
+          = link_to "キャンセル", practice_path, class: "is-button-simple-md-secondary"
