--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -4,83 +4,86 @@ header.page-header
     .page-header__container
       h2.page-header__title
         = @practice.title
-      .page-header__action
-        = link_to practices_path, class: 'is-button-standard-md-secondary' do
-          i.fa.fa-angle-left
-          = t('practices')
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to new_practice_path, class: 'is-button-simple-md-warning' do
+              i.fa.fa-plus
+              = t('new_practice')
+          li.page-header-actions__item
+            = link_to practices_path, class: 'is-button-simple-md-secondary' do
+              i.fa.fa-angle-left
+              = t('practices')
 
 = render "practices/page_tabs"
 
 .container
-  .row.is-gutter-width-32
-    .col-md-6.col-xs-12
-
-      section.practice-content
-        header.practice-content__header
-          h2.practice-content__title= t('helpers.label.practice.description')
-        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
-          = @practice.description
-        - if @practice.not_completed?(current_user)
-          footer.practice-content__footer
-            .practice-content-actions
-              ul.practice-content-actions__items
-                li.practice-content-actions__item
-                  = link_to new_question_path, class: 'is-button-standard-md-warning' do
-                    i.fa.fa-question-circle
-                    | 質問する
-                li.practice-content-actions__item
-                  button.im-stack.is-button-standard-md-warning
-                    i.fa.fa-exclamation-triangle
-                    = '行き詰まった！'
-                  javascript:
-                    $(document).on('click', '.im-stack', function(){
-                      var text = "#{current_user.login_name}さんが#{@practice.title}で行き詰っています！わかる方は助けてあげてください！";
-                      $.post('/chat_notices', {text: text});
-                    });
-
-      section.practice-content
-        header.practice-content__header
-          h2.practice-content__title= t('helpers.label.practice.goal')
-        .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
-          = @practice.goal
+  .practice-contents
+    section.practice-content
+      header.practice-content__header
+        h2.practice-content__title= t('helpers.label.practice.description')
+      .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
+        = @practice.description
+      - if @practice.not_completed?(current_user)
         footer.practice-content__footer
           .practice-content-actions
             ul.practice-content-actions__items
-              - if @practice.product(current_user).present?
-                li.practice-content-actions__item
-                  = link_to [@practice, @practice.product(current_user)], class: 'is-button-standard-md-info' do
-                    i.fa.fa-file
-                    | 提出物
-              - else
-                li.practice-content-actions__item
-                  = link_to new_practice_product_path(@practice), class: 'is-button-standard-md-info' do
-                    i.fa.fa-file
-                    | 提出物を作る
-              - if @practice.not_completed?(current_user)
-                li.practice-content-actions__item
-                  = link_to practice_learning_path(@practice), method: :put, class: 'is-button-standard-md-info' do
-                    i.fa.fa-check-circle
-                    = t('complete')
+              li.practice-content-actions__item
+                = link_to new_question_path, class: 'is-button-simple-md-warning' do
+                  i.fa.fa-question-circle
+                  | 質問する
+              li.practice-content-actions__item
+                button.im-stack.is-button-simple-md-warning
+                  i.fa.fa-exclamation-triangle
+                  = '行き詰まった！'
+                javascript:
+                  $(document).on('click', '.im-stack', function(){
+                    var text = "#{current_user.login_name}さんが#{@practice.title}で行き詰っています！わかる方は助けてあげてください！";
+                    $.post('/chat_notices', {text: text});
+                  });
 
-      .form-actions
-        ul.form-actions__items
-          li.form-actions__item
-            = link_to edit_practice_path(@practice), class: 'is-button-standard-md-primary' do
-              i.fa.fa-pencil
-              = t('edit')
-          - if current_user.admin?
-            li.form-actions__item
-              = link_to practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-standard-md-danger' do
-                i.fa.fa-trash-o
-                = t('destroy')
+    section.practice-content
+      header.practice-content__header
+        h2.practice-content__title= t('helpers.label.practice.goal')
+      .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
+        = @practice.goal
+      footer.practice-content__footer
+        .practice-content-actions
+          ul.practice-content-actions__items
+            - if @practice.product(current_user).present?
+              li.practice-content-actions__item
+                = link_to [@practice, @practice.product(current_user)], class: 'is-button-simple-md-info' do
+                  i.fa.fa-file
+                  | 提出物
+            - else
+              li.practice-content-actions__item
+                = link_to new_practice_product_path(@practice), class: 'is-button-simple-md-info' do
+                  i.fa.fa-file
+                  | 提出物を作る
+            - if @practice.not_completed?(current_user)
+              li.practice-content-actions__item
+                = link_to practice_learning_path(@practice), method: :put, class: 'is-button-simple-md-info' do
+                  i.fa.fa-check-circle
+                  = t('complete')
 
-    .col-xs-12
-      .interns-icons
-        h2.user-reports__title
-          = t('completed_users')
-        ul.completed-users
-          - @practice.completed_users.each do |user|
-            li.completed-users__user
-              = link_to user, class: "completed-users__user-link" do
-                span.completed-users__user-icon
-                  = gravatar_tag user, secure: true, size: 32
+  .form-actions
+    ul.form-actions__items
+      li.form-actions__item
+        = link_to edit_practice_path(@practice), class: 'is-button-simple-md-primary' do
+          i.fa.fa-pencil
+          = t('edit')
+      - if current_user.admin?
+        li.form-actions__item
+          = link_to practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-simple-md-danger' do
+            i.fa.fa-trash-o
+            = t('destroy')
+
+  .interns-icons
+    h2.user-reports__title
+      = t('completed_users')
+    ul.completed-users
+      - @practice.completed_users.each do |user|
+        li.completed-users__user
+          = link_to user, class: "completed-users__user-link" do
+            span.completed-users__user-icon
+              = gravatar_tag user, secure: true, size: 32
