--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -14,5 +14,5 @@
 
   .form-actions
     ul.form-actions__items
-      li.form-actions__item
-        = f.submit nil, class: 'is-button-standard-lg-warning'
+      li.form-actions__item.is-main
+        = f.submit "提出する", class: 'is-button-simple-lg-warning is-block'
