--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -25,7 +25,9 @@
             = f.fields_for :learning_times do |learning_time|
               = render "learning_time_fields", f: learning_time
             .links
-              = link_to_add_association "学習時間追加", f, :learning_times, class: 'is-button-standard-md-warning'
+              = link_to_add_association f, :learning_times, class: 'is-button-simple-md-warning' do
+                i.fa.fa-plus
+                | 学習時間追加
 
     .form-item
       .row.js-markdown-parent
@@ -39,11 +41,11 @@
 
   .form-actions
     ul.form-actions__items
+      li.form-actions__item.is-main
+        = f.submit nil, class: 'is-button-simple-lg-warning is-block'
       - if params[:action] == 'new' || params[:action] == 'create'
         li.form-actions__item
-          = link_to 'キャンセル', reports_path, class: "is-button-standard-md-secondary"
+          = link_to 'キャンセル', reports_path, class: "is-button-simple-md-secondary"
       - elsif params[:action] == 'edit' || params[:action] == 'update'
         li.form-actions__item
-          = link_to 'キャンセル', report_path, class: "is-button-standard-md-secondary"
-      li.form-actions__item
-        = f.submit nil, class: 'is-button-standard-lg-warning'
+          = link_to 'キャンセル', report_path, class: "is-button-simple-md-secondary"
