--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -3,9 +3,12 @@ header.page-header
     .page-header__container
       h2.page-header__title
         = t('new_report')
-      = link_to reports_path, class: 'is-button-standard-md-secondary' do
-        i.fa.fa-angle-left
-        = t('to_index_of_reports')
+      .page-header-actions
+        .page-header-actions__items
+          .page-header-actions__item
+            = link_to reports_path, class: 'is-button-simple-md-secondary' do
+              i.fa.fa-angle-left
+              = t('to_index_of_reports')
 
 .page-body
   .container
