--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -3,10 +3,15 @@ header.page-header
   .container
     .page-header__container
       h1.page-header__title 日報
-      .page-header__action
-        = link_to new_report_path, class: 'is-button-standard-md-warning' do
-          i.fa.fa-plus
-          = t('new_report')
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to new_report_path, class: "page-header-actions__items-link is-button-simple-md-warning" do
+              i.fa.fa-plus
+              = t("new_report")
+          li.page-header-actions__item
+            = link_to reports_path, class: "page-header-actions__items-link is-button-simple-md-secondary" do
+              = t("to_index_of_reports")
 
 .page-body
   .container
@@ -27,4 +32,4 @@ header.page-header
             = t("we_checked")
           ul.footprints__items
             - @footprints.each do |check|
-              = render 'reports/report_check', report: @report, check: check
+              = render "reports/report_check", report: @report, check: check
