--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -15,7 +15,7 @@ header.page-header
               i.fa.fa-angle-left
               = t('practices')
 
-= render "practices/page_tabs"
+= render "page_tabs", resource: @practice
 
 .container
   .practice-contents
