ユーザー詳細ページの日報部分を分離

--- a/app/views/practices/reports/index.html.slim
+++ b/app/views/practices/reports/index.html.slim
@@ -13,4 +13,4 @@ header.page-header
 
 .container
   - if @practice.reports.any?
-    = render 'reports', reports: @reports
+    = render 'reports/reports', reports: @reports
