--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -25,5 +25,5 @@
       - elsif params[:action] == 'edit' || params[:action] == 'update'
         li.form-actions__item
           = link_to 'キャンセル', question_path, class: "is-button-simple-md-secondary"
-      li.form-actions__item
-        = f.submit nil, class: 'is-button-simple-lg-warning'
+      li.form-actions__item.is-main
+        = f.submit nil, class: 'is-button-simple-lg-warning is-block'
