--- a/app/assets/stylesheets/blocks/report/_footprints.sass
+++ b/app/assets/stylesheets/blocks/report/_footprints.sass
@@ -12,11 +12,14 @@
   flex: 100
   display: flex
   +margin(horizontal, -.25rem)
+  margin-bottom: -.5rem
+  flex-wrap: wrap
 
 .footprints-item
   display: flex
   align-items: center
   +margin(horizontal, .25rem)
+  margin-bottom: .5rem
 
 .footprints-item__checker-icon
   +size(2rem)
