--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -41,11 +41,12 @@
 
   .form-actions
     ul.form-actions__items
+      li.form-actions__item
+        = f.submit "WIP", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-wip"
       li.form-actions__item.is-main
-        = f.submit nil, class: 'is-button-simple-lg-warning is-block'
-      - if params[:action] == 'new' || params[:action] == 'create'
-        li.form-actions__item
+        = f.submit nil, class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
+      li.form-actions__item
+        - if params[:action] == 'new' || params[:action] == 'create'
           = link_to 'キャンセル', reports_path, class: "is-button-simple-md-secondary"
-      - elsif params[:action] == 'edit' || params[:action] == 'update'
-        li.form-actions__item
+        - elsif params[:action] == 'edit' || params[:action] == 'update'
           = link_to 'キャンセル', report_path, class: "is-button-simple-md-secondary"
