--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -4,6 +4,8 @@
       .thread-header__reported-at
         | #{l report.reported_at, format: :long} の日報
       h1.thread-header__title
+        - if report.wip?
+          p WIP
         = report.title
         - if @checks.any?
           .stamp.stamp-approve
@@ -50,7 +52,7 @@
           .thread-edit-tools__inner
             ul.thread-edit-tools__items
               li.thread-edit-tools__item
-                = link_to edit_report_path(report), class: 'thread-edit-tools__item-link is-success' do
+                = link_to edit_report_path(report), class: 'thread-edit-tools__item-link is-success', id: "js-shortcut-edit" do
                   i.fa.fa-pencil
               li.thread-edit-tools__item
                 = link_to new_report_path(id: report), class: 'thread-edit-tools__item-link is-success' do
