提出物の表示・非表示に関する処理を修正
- 提出物の表示・非表示の制御をメソッドにまとめる
  - この修正に伴いタブ表示に関する処理を修正
- has_checked_product?の処理を修正
- has_product_checked?のテストを追加
- タブ表示に関連するControllerで不要になっていた箇所を削除
- タブ表示に関連するControllerで機能追加前と差分があった箇所を修正

--- a/app/views/application/_page_tabs.html.slim
+++ b/app/views/application/_page_tabs.html.slim
@@ -2,8 +2,12 @@
   .container
     ul.page-tabs__items
       - page_tab_members(resource).each do |member|
-        - if member[:admin_displayable]
-          - if admin_login?
-            = render "page_tab", member: member
+        - if member[:is_products_tab]
+          - if resource.is_a?(User)
+            - if product_displayable?(user: resource)
+              = render "page_tab", member: member
+          - elsif resource.is_a?(Practice)
+            - if product_displayable?(practice: resource)
+              = render "page_tab", member: member
         - else
           = render "page_tab", member: member
