--- a/app/assets/stylesheets/blocks/thread/_threads.sass
+++ b/app/assets/stylesheets/blocks/thread/_threads.sass
@@ -34,6 +34,7 @@
 .thread-list-item__header
   display: flex
   align-items: center
+  margin-bottom: .125rem
   +media-breakpoint-down(sm)
     flex-direction: column
     align-items: flex-start
