--- a/app/views/users/practices/index.html.slim
+++ b/app/views/users/practices/index.html.slim
@@ -11,9 +11,7 @@ header.page-header
 
 .page-body
   .container
-    .user.is-margin-bottom-24
-      .row.is-gutter-width-32
-        .col-md-6.col-xs-12
-          - if @user.active_practices.present?
-            = render "active_practices", user: @user
-          = render "completed_practices", user: @user
+    .user
+      - if @user.active_practices.present?
+        = render "active_practices", user: @user
+      = render "completed_practices", user: @user
