提出物一覧のタイトル文字列を修正

--- a/app/views/practices/products/index.html.slim
+++ b/app/views/practices/products/index.html.slim
@@ -13,4 +13,4 @@ header.page-header
 
 .container
   - if product_displayable?(practice: @practice)
-    = render 'products/products', products: @products
+    = render 'products/products', products: @products, resource: @practice
