--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -7,7 +7,7 @@ $background-color-shade: #cbcbcb
 
 $default-text: #35343c
 $reversal-text: white
-$muted-text: #7b8386
+$muted-text: #9da4a7
 
 $side: $main-color
 $side-border: #3d4766
