--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -41,8 +41,8 @@
 
   .form-actions
     ul.form-actions__items
-      li.form-actions__item
-        = f.submit "WIP", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-wip"
+      li.form-actions__item.is-main
+        = f.submit "WIP", class: 'is-button-simple-lg-primary is-block', id: "js-shortcut-wip"
       li.form-actions__item.is-main
         = f.submit nil, class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
       li.form-actions__item
