--- a/app/assets/stylesheets/blocks/form/_form.sass
+++ b/app/assets/stylesheets/blocks/form/_form.sass
@@ -24,6 +24,8 @@
   +padding(horizontal, .375rem)
   &.is-main
     width: 12rem
+    +media-breakpoint-down(sm)
+      width: 100%
   +media-breakpoint-down(sm)
     width: 100%
     +padding(horizontal, 0)
