--- a/app/views/reports/_recent_reports.slim
+++ b/app/views/reports/_recent_reports.slim
@@ -1,7 +1,10 @@
-.recent-reports-item
+.recent-reports-item(class="#{report.wip? ? 'is-wip':''}")
   = link_to report, class: 'recent-reports-item__link' do
     = gravatar_tag report.user, secure: true, size: 88, html: { class: "recent-reports-item__user-icon" }
     h3.recent-reports-item__title
+      - if report.wip?
+        span.recent-reports-item__title-icon
+          | WIP
       = report.title
     time.recent-reports-item__date
       = l report.updated_at, format: :date_default
