WIPの説明を追加

--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -8,3 +8,14 @@ $grid-gutter-width: 1rem
 $root-background-color: $background-color
 $basic-sans-serif: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif
 
+$xs-button-font-size: .75rem
+$sm-button-font-size: .75rem
+$md-button-font-size: .8125rem
+$lg-button-font-size: .9375rem
+$xl-button-font-size: 1.25rem
+
+$button-xs-height-ratio: 2.4
+$button-sm-height-ratio: 2.2
+$button-md-height-ratio: 2.6
+$button-lg-height-ratio: 3
+$button-xl-height-ratio: 2.85
